// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`formatEsBucketsForHistogram returns properly formatted buckets 1`] = `
Array [
  Object {
    "key": 1000,
    "x": 2000,
    "x0": 1000,
  },
  Object {
    "key": 2000,
    "x": 3000,
    "x0": 2000,
  },
  Object {
    "key": 3000,
    "x": 4000,
    "x0": 3000,
  },
]
`;

exports[`formatEsBucketsForHistogram returns properly formatted object for generic call 1`] = `
Array [
  Object {
    "key": 1000,
    "name": "something",
    "value": 150,
    "x": 2000,
    "x0": 1000,
  },
  Object {
    "key": 2000,
    "name": "something",
    "value": 120,
    "x": 3000,
    "x0": 2000,
  },
]
`;

exports[`formatEsBucketsForHistogram returns the provided buckets if length is below min threshold 1`] = `Array []`;
